//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.echo.adapter;

message Mutation {
  string innerJson = 1;
}
